--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -52,7 +52,7 @@
       </blockquote>
     </mat-card>
   </div>
-  
+  <div fxFlex *ngIf="leaders"></div>
   <mat-list>
     <mat-list-item *ngFor="let leader of leaders">
       <img matListAvatar src={{leader.image}} alt={{leader.name}}>
@@ -65,6 +65,10 @@
       </p>
     </mat-list-item>
   </mat-list>
+</div>
+<div [hidden]="leaders">
+  <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+</div>
 
     <!-- <div fxFlex>
         <h2>Corporate Leadership</h2>
